Fix Mobile scroll button, only show on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,19 @@ html {
   color: var(--imp-text-color) !important;
 }
 
+html {
+  height: 100%;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  position: relative;
+  min-width: 250px;
+}
+
+section {
+  height: 100%;
+  scroll-snap-align: start;
+}
+
 /* --------- */
 /*  Preloader */
 /* --------- */
@@ -53,7 +66,7 @@ html {
 /* --------- */
 
 ::-webkit-scrollbar {
-  width: 7px;
+  width: 9px;
 }
 
 /* Track */
@@ -411,6 +424,7 @@ html {
 /* --------- */
 /* Footer */
 /* --------- */
+
 .footer {
   background-color: #000000;
   bottom: 0 !important;
